fix: increase `gap` between changes

--- a/src/components/tx/security/redefine/styles.module.css
+++ b/src/components/tx/security/redefine/styles.module.css
@@ -34,7 +34,7 @@
   max-height: 300px;
   overflow-y: auto;
   align-items: center;
-  gap: 1px;
+  gap: var(--space-1);
 }
 
 .balanceChange {
